[package]
name = "specter"
version = "0.1.0"
description = "A basic, screenshot-protected internet browser built with Tauri"
edition = "2021"
rust-version = "1.77.2"

# Capitalize the binary so the macOS app-menu name reads "Specter" in dev too
# (the crate name stays lowercase per convention; `tauri build` already names
# the bundle from productName).
[[bin]]
name = "Specter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`         -> multiple webviews in one window (add_child, get_webview)
# `macos-private-api` -> enables WebKit's `fullScreenEnabled` so the HTML5
#                        Fullscreen API (fullscreen video) works.
tauri = { version = "2", features = ["unstable", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
