[package]
name = "specter"
version = "0.1.0"
description = "A basic, screenshot-protected internet browser built with Tauri"
edition = "2021"
rust-version = "1.77.2"

# The binary name is what the macOS app-menu shows in dev, so it carries the
# user-facing product name (the crate/package stays "specter").
[[bin]]
name = "Chrome"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`         -> multiple webviews in one window (add_child, get_webview)
# `macos-private-api` -> enables WebKit's `fullScreenEnabled` so the HTML5
#                        Fullscreen API (fullscreen video) works.
tauri = { version = "2", features = ["unstable", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Used to flip WKWebView.allowsMagnification (trackpad pinch zoom), which
# neither Tauri nor wry expose.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
